--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/foundation.min.css">
+
+       <link rel="stylesheet" href="css/foundation.min.css">
         <link rel="stylesheet" href="fonts/foundation-icons.css">
+
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
 
+        <h1>Title of the website</h1>
 
+        <p>Hello world! This is HTML Boilerplate.</p>
+        
         <section class="grid-container grid-container-padded">
 
 
