added slideshow html to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
         <h1>Title of the website</h1>
 
         <p>Hello world! This is HTML Boilerplate.</p>
-        
+
+        <div class="slideshow">
+            <div>slide 1</div>
+            <div>slide 2</div>
+            <div>slide 3</div>
+        </div>  
+
         <section class="grid-container grid-container-padded">
 
 
